# phdm

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
cmake/Modules/: Findarmadillo.cmake
include/: GrapheneExp.hpp  GrapheneFloquet.hpp  GrapheneSine.hpp  PhosphoreneSine.hpp  Utils.hpp
scripts/: GrapheneSine_analysis.py  Phosphorene_analysis.py
simulations/: GrapheneExp.cpp  GrapheneExp.ini  GrapheneExpDirac.cpp  GrapheneExpDirac.ini  GrapheneFloquet.cpp  GrapheneFloquet.ini  GrapheneSine.cpp  GrapheneSine.ini  GrapheneSineDirac.cpp  GrapheneSineDirac.ini  PhosphoreneSine.cpp  PhosphoreneSine.ini
